--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^5.2.1",
     "@nivo/bar": "^0.99.0",
     "@nivo/core": "^0.99.0",
+    "@nivo/heatmap": "^0.99.0",
     "@nivo/line": "^0.99.0",
     "@nivo/pie": "^0.99.0",
     "@radix-ui/react-accordion": "^1.2.12",
@@ -46,6 +47,8 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
+    "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
     "lucide-react": "^0.542.0",
     "mssql": "^11.0.1",
     "next": "15.5.2",
@@ -54,6 +57,7 @@
     "react-day-picker": "^9.9.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "react-leaflet": "^5.0.0",
     "react-resizable-panels": "^3.0.5",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
@@ -64,6 +68,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/leaflet": "^1.9.20",
     "@types/mssql": "^9.1.7",
     "@types/mysql": "^2.15.27",
     "@types/node": "^20",
